kubernetes/apps/base/zammad/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: media
  name: zammad
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: zammad
  template:
    metadata:
      labels:
        app: zammad
    spec:
      containers:
        - name: zammad
          image: revenz/zammad
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 4000m
              memory: 2Gi
            limits:
              cpu: "10"
              memory: 8Gi
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - mountPath: /media
              name: zammad-media
            - mountPath: /temp
              name: zammad-temp
            - mountPath: /app/Data
              name: zammad-data
            - mountPath: /app/Logs
              name: zammad-logs
            - mountPath: /app/common
              name: zammad-common
      restartPolicy: Always
      volumes:
        - name: zammad-media
          persistentVolumeClaim:
            claimName: media
        - name: zammad-common
          persistentVolumeClaim:
            claimName: zammad-common
        - name: zammad-data
          persistentVolumeClaim:
            claimName: zammad-data
        - name: zammad-logs
          persistentVolumeClaim:
            claimName: zammad-logs
        - name: zammad-temp
          emptyDir:
            sizeLimit: 100Gi
