kubernetes/apps/base/zammad/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zammad
  namespace: media
spec:
  selector:
    app: zammad
  ports:
    - protocol: TCP
      port: 19200
      targetPort: 5000
