kubernetes/apps/base/zammad/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zammad
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`zammad.${cluster_domain}`)
      kind: Rule
      services:
        - name: zammad
          port: 19200
